Fixed tooltips not visible from expanded sections

--- a/material-collapse/material-collapse.less
+++ b/material-collapse/material-collapse.less
@@ -3,4 +3,8 @@
 	max-height: 0;
 	overflow: hidden;
 	transition: max-height 175ms cubic-bezier(0, 0, 0.2, 1);
+
+	&.material-collapse--expanded {
+		overflow: unset;
+	}
 }
